[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commiter"
version = "0.1.0"
description = "A CLI tool that provides AI-generated commit messages for git"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
commit = "commiter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["commiter"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
